scrollbar fix

--- a/styles.css
+++ b/styles.css
@@ -1,76 +1,79 @@
 :root {
-    --title-color: #A66249;
-    --footer-color: #F2D9D0;
-    --background-color: #D9A796;
+  --title-color: #a66249;
+  --footer-color: #f2d9d0;
+  --background-color: #d9a796;
 }
 
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; /* Add this line to include padding and border in the element's total width and height */
 }
 
-html, body {
-    height: 100%;
-    font-family: 'Book Antiqua', Tahoma, Geneva, Verdana, sans-serif;
+html,
+body {
+  height: 100%;
+  overflow: hidden; /* Prevent scrolling */
+  font-family: "Book Antiqua", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 header {
-    padding: 10px;
-    height: 20vh;
-    background-color: var(--title-color);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  padding: 10px;
+  height: 20vh;
+  background-color: var(--title-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .header-title {
-    font-size: 1em;
-    color: var(--footer-color);
+  font-size: 1em;
+  color: var(--footer-color);
 }
 
 .limiter-footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 #buttons {
-    height: 15%;
-    background-color: var(--title-color);
+  height: 15%;
+  background-color: var(--title-color);
 }
 
 footer {
-    padding: 10px;
-    height: 5%;
-    background-color: var(--footer-color);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+  padding: 10px;
+  height: 5%;
+  background-color: var(--footer-color);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .content {
-    width: min(100vw, 60vh);
-    height: min(100vh, 420vw);
-    background-color: orange;
-    margin: 0 auto;
+  width: min(100vw, 60vh);
+  height: min(100vh, 100vw);
+  background-color: orange;
+  margin: 0 auto;
 }
 
 #playfield {
-    height: 60vh;
-    width: 60vh;
-    background-color: var(--background-color);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
+  height: 60vh;
+  width: 60vh;
+  background-color: var(--background-color);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .cell {
-    height: calc((100% / 9) - 4px);
-    width: calc((100% / 9) - 4px);
-    margin: 2px;
-    background-color: var(--footer-color);
-    border: 1px solid black;
-    box-sizing: border-box;
-    flex-shrink: 0;
+  height: calc((100% / 9) - 4px);
+  width: calc((100% / 9) - 4px);
+  margin: 2px;
+  background-color: var(--footer-color);
+  border: 1px solid black;
+  box-sizing: border-box;
+  flex-shrink: 0;
 }
